--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1.1",
+    "cross-fetch": "2.1.0",
     "font-awesome": "4.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -12,7 +13,7 @@
     "react-redux": "5.0.7",
     "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "1.1.5",
     "reactstrap": "5.0.0",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
